src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .instill-text-h1 {
    @apply font-mono text-[32px] font-semibold leading-[42px] sm:text-[64px] sm:leading-[83px];
  }
  .instill-text-h2 {
    @apply font-mono text-[23px] font-medium leading-[30px] sm:text-[36px] sm:leading-[47px];
  }
  .instill-text-h2-fixed {
    @apply font-mono text-[36px] font-medium leading-[47px];
  }
  .instill-text-h3 {
    @apply font-mono text-lg font-medium leading-[27px] sm:text-2xl sm:leading-[31px];
  }
  .instill-text-h3-light {
    @apply font-mono text-lg font-light leading-[27px] sm:text-2xl sm:leading-[41px];
  }
  .instill-text-body-fixed {
    @apply font-sans text-base font-normal leading-[28px];
  }
  .instill-text-body {
    @apply font-sans text-sm font-normal leading-[24px] sm:text-base sm:leading-[28px];
  }
  .instill-text-small {
    @apply font-mono text-xs font-normal;
  }
  .instill-input-highlight {
    @apply border border-instillGrey70 focus:border-instillBlue focus:outline-none focus:ring-0 focus:ring-white;
  }
}

@font-face {
  font-family: "instill";
  font-style: normal;
  font-weight: 400;
  src: url("/fonts/instillFont-Regular.woff2") format("woff2"),
    /* Super Modern Browsers */ url("/fonts/instillFont-Regular.woff")
      format("woff");
}

/*
  Mailchimp content
*/

/*
  This is for special mailchimp quote block
  Used in Sept 2022 newsletter
*/

td[style*="color: #40A8F5"] > em {
  color: #40a8f5;
}

/* table[style*="border: 2px dashed"] {
  border-color: white !important;
  background-color: #1A1A1A !important;
} */

.mcnTextContent,
.mceText {
  color: #1a1a1a !important;
}

table.templateContainer {
  max-width: none !important;
}

h3.null {
  color: #1a1a1a !important;
}

.mcnButtonContent {
  background-color: #23c4e7 !important;
}

td.mcnTextContent > ul,
div.mceText > ul {
  list-style-type: circle !important;
  padding-left: 16px;
}

table.mcnCaptionBottomContent {
  width: 100% !important;
}

table.mcnCaptionTopContent {
  width: 100% !important;
}

.mcnTextContent > p,
.mcnTextContent > h3,
.mcnTextContent > h4,
.mcnTextContent > li,
.mceText > p,
.mceText > h3,
.mceText > h4,
.mceText > li {
  color: #1a1a1a;
}

.mcnTextContent > ul > li,
.mceText > ul > li {
  margin-top: 5px;
  margin-bottom: 5px;
}

.mcnTextContent > ul,
.mceText > ul {
  margin-top: 16px;
  margin-bottom: 16px;
}

.mceWrapperInner {
  background: transparent !important;
}

.mceText a {
  color: rgb(0, 0, 0);
  font-style: normal;
  font-weight: normal;
  text-decoration: underline;
  direction: ltr;
}

.mceText h3 {
  color: rgb(0, 0, 0);
  font-family: "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
  font-size: 20px;
  font-weight: bold;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 0px;
  direction: ltr;
}

/* Swiper slider css */

/* Default styles for width 800px */
.jumbotron > .swiper {
  width: 600px !important;
  padding-bottom: 50px !important;
}

.jumbotron > .swiper > .swiper-wrapper > .swiper-slide {
  background-position: center !important;
  background-size: cover !important;
  width: 500px !important;
}

.jumbotron-card {
  height: 680px;
}

.open-ai-stiker {
  height: 450px;
}

.jumbotron-file-uploader {
  height: 450px;
}

.summary-box {
  height: 450px;
}

.ask-on-page-box {
  height: 400px;
}

.seo-box {
  height: 220px;
}

.llama-chat-box {
  height: 170px;
}

.seo-image-box {
  height: 210px;
}

.llama-chat-image-box {
  height: 260px;
}

@media (max-width: 800px) {
  .ask-on-page-box {
    height: 365px;
  }
}

/* Media query for width 600px */
@media (max-width: 600px) {
  .jumbotron > .swiper {
    width: 350px !important;
  }

  .jumbotron > .swiper > .swiper-wrapper > .swiper-slide {
    width: 350px !important;
  }

  .seo-image-box {
    height: 200px;
  }

  .llama-chat-image-box {
    height: 240px;
  }

  .seo-box {
    height: 200px;
  }

  .llama-chat-box {
    height: 170px;
  }

  .jumbotron-file-uploader {
    height: 450px;
  }

  .summary-box {
    height: 450px;
  }

  .ask-on-page-box {
    height: 345px;
  }

  .open-ai-stiker {
    height: 430px;
  }

  .twitter-icon-comunity {
    left: 185px;
  }
}

/* Media query for width 400px */
@media (max-width: 400px) {
  .jumbotron > .swiper {
    width: 300px !important;
  }

  .jumbotron > .swiper > .swiper-wrapper > .swiper-slide {
    width: 300px !important; /* You can adjust the width accordingly */
  }

  .jumbotron-card {
    height: 570px;
  }

  .open-ai-stiker {
    height: 340px;
  }
  .seo-box {
    height: 160px;
  }

  .llama-chat-box {
    height: 160px;
  }

  .seo-image-box {
    height: 165px;
  }

  .llama-chat-image-box {
    height: 165px;
  }

  .jumbotron-file-uploader {
    height: 340px;
  }

  .summary-box {
    height: 340px;
  }

  .ask-on-page-box {
    height: 290px;
  }

  .twitter-icon-comunity {
    right: 0px !important;
  }
}

@media (max-width: 800px) {
  /* .twitter-icon-comunity {
    left: 747px;
  } */
}

/* .swiper-slide-prev {
  filter: blur(1px);
}

.swiper-slide-next {
  filter: blur(1px);
} */

.object-contain {
  object-fit: contain;
}

.jumbotron
  > .swiper
  > .swiper-wrapper
  > .swiper-slide
  > .swiper-slide-shadow-cards {
  transition-duration: 1500ms !important;
}

